force-app/main/default/objects/DM_Site__c/DM_Site__c.object-meta.xml
<CustomObject>
    <label>Production Site</label>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Production Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>