force-app/main/default/objects/DM_Site__c/fields/DM_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Washing</fullName>
            </value>
            <value>
                <fullName>Trimming</fullName>
            </value>
            <value>
                <fullName>Bagging</fullName>
            </value>
            <value>
                <fullName>Boxing</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>