force-app/main/default/objects/DM_Site__c/fields/DM_Backflow_Prevention_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Backflow_Prevention_Type__c</fullName>
    <label>Backflow Prevention Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atmospheric Vacuum Breaker (AVB)</fullName>
            </value>
            <value>
                <fullName>Pressure Vacuum Breaker (PVB)</fullName>
            </value>
            <value>
                <fullName>Double Check Valve Assembly (DCVA)</fullName>
            </value>
            <value>
                <fullName>Reduced Pressure Zone (RPZ)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>