force-app/main/default/objects/DM_Site__c/fields/DM_Certified_Organic__c.field-meta.xml
<CustomField>
    <fullName>DM_Certified_Organic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certified Organic</label>
    <type>Checkbox</type>
</CustomField>