force-app/main/default/objects/DM_Site__c/fields/DM_Cleaning_Frequency__c.field-meta.xml
<CustomField>
    <fullName>DM_Cleaning_Frequency__c</fullName>
    <label>Cleaning Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Between Batches</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>