force-app/main/default/objects/DM_Site__c/fields/DM_Container_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Container_Type__c</fullName>
    <label>Container Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trays</fullName>
            </value>
            <value>
                <fullName>Pots</fullName>
            </value>
            <value>
                <fullName>Soil Blocks</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>