force-app/main/default/objects/DM_Site__c/fields/DM_Food_Contact_Surfaces__c.field-meta.xml
<CustomField>
    <fullName>DM_Food_Contact_Surfaces__c</fullName>
    <inlineHelpText>What surfaces are used or material types used at the site?</inlineHelpText>
    <label>Food Contact Surfaces</label>
    <type>TextArea</type>
</CustomField>