force-app/main/default/objects/DM_Site__c/fields/DM_GPS_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>DM_GPS_Coordinates__c</fullName>
    <label>GPS Coordinates</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>