force-app/main/default/objects/DM_Site__c/fields/DM_Growing_Medium__c.field-meta.xml
<CustomField>
    <fullName>DM_Growing_Medium__c</fullName>
    <label>Growing Medium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potting Soil</fullName>
            </value>
            <value>
                <fullName>Peat Moss Mix</fullName>
            </value>
            <value>
                <fullName>Coconut Coir</fullName>
            </value>
            <value>
                <fullName>Perlite &amp; Vermiculite Blend</fullName>
            </value>
            <value>
                <fullName>Compost-Based Mix</fullName>
            </value>
            <value>
                <fullName>Rockwool</fullName>
            </value>
            <value>
                <fullName>Custom Farm Blend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>