force-app/main/default/objects/DM_Site__c/fields/DM_Heating_System__c.field-meta.xml
<CustomField>
    <fullName>DM_Heating_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heating System</label>
    <type>Checkbox</type>
</CustomField>