force-app/main/default/objects/DM_Site__c/fields/DM_Irrigation_Source__c.field-meta.xml
<CustomField>
    <fullName>DM_Irrigation_Source__c</fullName>
    <label>Irrigation Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Well</fullName>
            </value>
            <value>
                <fullName>Pond</fullName>
            </value>
            <value>
                <fullName>Municipal</fullName>
            </value>
            <value>
                <fullName>Creek / River</fullName>
            </value>
            <value>
                <fullName>Rainwater</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>