force-app/main/default/objects/DM_Site__c/fields/DM_Last_Cleaning_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Last_Cleaning_Date__c</fullName>
    <label>Last Cleaning Date</label>
    <type>Date</type>
</CustomField>