force-app/main/default/objects/DM_Site__c/fields/DM_Lighting_Supplementation__c.field-meta.xml
<CustomField>
    <fullName>DM_Lighting_Supplementation__c</fullName>
    <label>Lighting Supplementation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>LED</fullName>
            </value>
            <value>
                <fullName>Fluorescent</fullName>
            </value>
            <value>
                <fullName>HID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>