force-app/main/default/objects/DM_Site__c/fields/DM_Organic_Handling_Only__c.field-meta.xml
<CustomField>
    <fullName>DM_Organic_Handling_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Organic Handling Only</label>
    <type>Checkbox</type>
</CustomField>