force-app/main/default/objects/DM_Site__c/fields/DM_Pathogen_Reduction_Verified__c.field-meta.xml
<CustomField>
    <fullName>DM_Pathogen_Reduction_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pathogen Reduction Verified</label>
    <type>Checkbox</type>
</CustomField>