force-app/main/default/objects/DM_Site__c/fields/DM_Propagation_Method__c.field-meta.xml
<CustomField>
    <fullName>DM_Propagation_Method__c</fullName>
    <label>Propagation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seeds_Transplant</fullName>
                <default>true</default>
                <label>Seed - Transplant</label>
            </value>
            <value>
                <fullName>Cuttings</fullName>
            </value>
            <value>
                <fullName>Grafting</fullName>
            </value>
            <value>
                <fullName>Division</fullName>
            </value>
            <value>
                <fullName>Layering</fullName>
            </value>
            <value>
                <fullName>Bulbs / Tubers</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>