force-app/main/default/objects/DM_Site__c/fields/DM_Sanitation_Protocol_in_Place__c.field-meta.xml
<CustomField>
    <fullName>DM_Sanitation_Protocol_in_Place__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sanitation Protocol in Place</label>
    <type>Checkbox</type>
</CustomField>