force-app/main/default/objects/DM_Site__c/fields/DM_Shared_with_Non_Organic_Equipment__c.field-meta.xml
<CustomField>
    <fullName>DM_Shared_with_Non_Organic_Equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shared with Non-Organic Equipment</label>
    <type>Checkbox</type>
</CustomField>