force-app/main/default/objects/DM_Site__c/fields/DM_Structure_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Structure_Type__c</fullName>
    <label>Structure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Glass</fullName>
            </value>
            <value>
                <fullName>Plastic</fullName>
            </value>
            <value>
                <fullName>High Tunnel</fullName>
            </value>
            <value>
                <fullName>Shade House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>