force-app/main/default/objects/DM_Site__c/fields/DM_System_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_System_Type__c</fullName>
    <label>System Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drip</fullName>
            </value>
            <value>
                <fullName>Overhead</fullName>
            </value>
            <value>
                <fullName>Furrow</fullName>
            </value>
            <value>
                <fullName>Sprinkler</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>