force-app/main/default/objects/DM_Site__c/fields/DM_Temperature_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>DM_Temperature_Monitoring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temperature Monitoring</label>
    <type>Checkbox</type>
</CustomField>