force-app/main/default/objects/DM_Site__c/fields/DM_Total_Area__c.field-meta.xml
<CustomField>
    <fullName>DM_Total_Area__c</fullName>
    <label>Total Area (Sq Ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>