force-app/main/default/objects/DM_Site__c/fields/DM_Used_for_On_Farm_Transplants__c.field-meta.xml
<CustomField>
    <fullName>DM_Used_for_On_Farm_Transplants__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used for On-Farm Transplants</label>
    <type>Checkbox</type>
</CustomField>