force-app/main/default/objects/DM_Site__c/fields/DM_Used_for_Propagation__c.field-meta.xml
<CustomField>
    <fullName>DM_Used_for_Propagation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used as a nursery also</inlineHelpText>
    <label>Used for Propagation</label>
    <type>Checkbox</type>
</CustomField>