force-app/main/default/objects/DM_Site__c/fields/DM_Ventilation_System__c.field-meta.xml
<CustomField>
    <fullName>DM_Ventilation_System__c</fullName>
    <label>Ventilation System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automated</fullName>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>