force-app/main/default/objects/DM_Site__c/recordTypes/DM_Compost_Curing_Pad.recordType-meta.xml
<RecordType>
    <fullName>DM_Compost_Curing_Pad</fullName>
    <active>true</active>
    <description>Production site for curing and storing compost until mature enough for application.</description>
    <label>Compost Curing Pad</label>
</RecordType>