force-app/main/default/objects/DM_Site__c/recordTypes/DM_Composting.recordType-meta.xml
<RecordType>
    <fullName>DM_Composting</fullName>
    <active>true</active>
    <description>On-farm composting production sites.</description>
    <label>Active Composting Bin</label>
</RecordType>