force-app/main/default/objects/DM_Site__c/recordTypes/DM_Equipment_Cleaning_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>DM_Equipment_Cleaning_Maintenance</fullName>
    <active>true</active>
    <description>Areas where tools and machinery are cleaned or maintained.</description>
    <label>Equipment Cleaning / Maintenance</label>
</RecordType>