force-app/main/default/objects/DM_Site__c/recordTypes/DM_Greenhouse.recordType-meta.xml
<RecordType>
    <fullName>DM_Greenhouse</fullName>
    <active>true</active>
    <description>Controlled environments for seedling starts, year-around crops, or speciality crops.</description>
    <label>Greenhouse</label>
</RecordType>