force-app/main/default/objects/DM_Site__c/recordTypes/DM_Irrigation_Systems.recordType-meta.xml
<RecordType>
    <fullName>DM_Irrigation_Systems</fullName>
    <active>true</active>
    <description>Wells, ponds, irrigation lines, and systems used to water crops.</description>
    <label>Irrigation Systems</label>
</RecordType>