force-app/main/default/objects/DM_Site__c/recordTypes/DM_Nursery.recordType-meta.xml
<RecordType>
    <fullName>DM_Nursery</fullName>
    <active>true</active>
    <description>Areas where plants are propagated before transplanting to fields.</description>
    <label>Nursery</label>
</RecordType>