force-app/main/default/objects/DM_Site__c/recordTypes/DM_Packing_Processing.recordType-meta.xml
<RecordType>
    <fullName>DM_Packing_Processing</fullName>
    <active>true</active>
    <description>Area where crops are washed, trimmed, packed or minimally processed before sale.</description>
    <label>Packing / Processing</label>
</RecordType>