force-app/main/default/objects/DM_Site__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DM_Parcel__c</columns>
    <columns>DM_Total_Area__c</columns>
    <columns>DM_Certified_Organic__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>DM_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>